[project]
name = "griptape-nodes-library-rodin"
version = "0.1.0"
description = "Griptape Nodes library for 3D model generation using the Rodin AI API"
authors = [
    {name = "Griptape", email = "hello@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "requests",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
